--- a/login.html
+++ b/login.html
@@ -1,29 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyManager Login</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Neon Login</title>
+    <link rel="stylesheet" href="styles.css">
+    
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: #121212;
+}
+
+/* Envelope Container */
+.envelope {
+    position: relative;
+    width: 120px;
+    height: 90px;
+    background: linear-gradient(135deg, #ff0080, #750e68e5); /* Pink to Yellow */
+    border-radius: 12px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    box-shadow: 0 0 20px rgba(255, 0, 128, 0.8);
+}
+
+.envelope:hover {
+    transform: scale(1.05);
+}
+
+/* Triangle flap with two-color effect */
+.envelope::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(135deg, #ff0066, #242321a9); /* Adjusted for smooth effect */
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transition: transform 0.5s ease-in-out;
+}
+
+/* Hover Effect: Simulate Opening */
+.envelope:hover::before {
+    transform: rotateX(180deg);
+}
+
+/* Glassmorphism Box (Login Form) */
+.box {
+    position: relative;
+    width: 350px;
+    padding: 40px;
+    background: rgba(255, 0, 128, 0.15);
+    border-radius: 15px;
+    backdrop-filter: blur(15px);
+    box-shadow: 0 0 25px rgba(255, 0, 128, 0.6);
+    text-align: center;
+
+    /* Hidden initially */
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    display: none;
+    border: 2px solid rgba(255, 0, 128, 0.4);
+}
+
+.box.active {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.box h2 {
+    color: #ff0080;
+    margin-bottom: 20px;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+/* Input Fields with Gradient Borders */
+.inputBox {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.inputBox input {
+    width: 100%;
+    padding: 12px;
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid transparent;
+    outline: none;
+    color: #fff;
+    font-size: 16px;
+    transition: border-bottom 0.3s ease-in-out;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(255, 0, 128, 0.3);
+}
+
+.inputBox input:focus {
+    border-bottom: 2px solid #ff0080;
+}
+
+/* Floating Labels */
+.inputBox span {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(255, 255, 255, 0.5);
+    transition: 0.3s ease-in-out;
+    pointer-events: none;
+}
+
+.inputBox input:focus ~ span,
+.inputBox input:valid ~ span {
+    top: 5px;
+    font-size: 12px;
+    color: #ff0080;
+}
+
+/* Neon Button */
+.btn {
+    width: 100%;
+    padding: 12px;
+    background: linear-gradient(135deg, #ff0080, #ff3399);
+    border: none;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 15px rgba(255, 0, 128, 0.6);
+}
+
+.btn:hover {
+    background: linear-gradient(135deg, #e60073, #ff1a75);
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 0, 128, 0.8);
+}
+
+/* Links */
+.links {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.links a {
+    color: #ff3399;
+    text-decoration: none;
+    font-size: 14px;
+    transition: color 0.3s ease-in-out;
+}
+
+.links a:hover {
+    text-decoration: underline;
+    color: #ff66b2;
+}
+
+</style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>Welcome to MyManager</h1>
-    <form id="loginForm">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter your username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter your password" required>
-      </div>
-      <button type="submit">Login</button>
-    </form>
-    <p class="footer-text">Admin: <strong>admin/admin</strong> | User: <strong>user/user</strong></p>
+
+  <div class="envelope"></div>
+
+  
+  <div class="box">
+      <h2>LOGIN</h2>
+      <form id="loginForm">
+          <div class="inputBox">
+              <input type="text" id="username" required>
+              <span>Username</span>
+          </div>
+          <div class="inputBox">
+              <input type="password" id="password" required>
+              <span>Password</span>
+          </div>
+          <button type="submit" class="btn">Login</button>
+      </form>
   </div>
 
-  <!-- JavaScript for Login -->
+
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="log.js"></script>
+  
+
 </body>
 </html>
